==> xiaoxiang781216/nuttx/arch/arm/src/max326xx/max32660/max32660_lowputc.c <==
#include <nuttx/config.h>
#include <stdbool.h>
#include <fixedmath.h>
#include <assert.h>
#include <nuttx/spinlock.h>
#include "arm_internal.h"
#include "hardware/max326_memorymap.h"
#include "hardware/max326_pinmux.h"
#include "hardware/max326_uart.h"
#include "max326_config.h"
#include "max326_periphclks.h"
#include "max326_clockconfig.h"
#include "max326_gpio.h"
#include "max326_lowputc.h"
#include <arch/board/board.h>
#  define CONSOLE_BASE        MAX326_UART0_BASE
#  define CONSOLE_BAUD        CONFIG_UART0_BAUD
#  define CONSOLE_PARITY      CONFIG_UART0_PARITY
#  define CONSOLE_BITS        CONFIG_UART0_BITS
#  define CONSOLE_STOPBITS2   CONFIG_UART0_2STOP
#    define CONSOLE_IFLOW     true
#    define CONSOLE_IFLOW     false
#    define CONSOLE_OFLOW     true
#    define CONSOLE_OFLOW     false
#  define CONSOLE_BASE        MAX326_UART1_BASE
#  define CONSOLE_BAUD        CONFIG_UART1_BAUD
#  define CONSOLE_PARITY      CONFIG_UART1_PARITY
#  define CONSOLE_BITS        CONFIG_UART1_BITS
#  define CONSOLE_STOPBITS2   CONFIG_UART1_2STOP
#    define CONSOLE_IFLOW     true
#    define CONSOLE_IFLOW     false
#    define CONSOLE_OFLOW     true
#    define CONSOLE_OFLOW     false

static void max326_setbaud(uintptr_t base,
                           const struct uart_config_s *config)
{
  ub32_t div;
  ub32_t pclk;
  uint32_t regval;
  uint32_t ibaud;
  unsigned int divider;
  int clkdiv;
  int i;

  /* Try all possible values of CLKDIV to find the smallest divider that
   * results in an integer divider >= 1.
   */

  pclk   = itob32(max326_pclk_frequency());
  clkdiv = -1;

  for (i = 0; i < 5; i++)
    {
      /* Calculate the divider associated with this value of clkdiv:
       * 128, 64, 32, 16, 8
       */

      divider = (1 << (7 - i));

      /* Calculate the temporary IBAUD value */

      div = pclk / (divider * config->baud);

      /* We are traversing from larger to larger smaller values.  Hence, the
       * 'div' value will be increasing with the smaller values.  So break
       * out of the loop as soon as we encounter a divider greater than or
       * equal to one.
       */

      if (div >= b32ONE)
        {
          DEBUGASSERT(div < itob32(4096));

          clkdiv = i;
          break;
        }
    }

  /* Then set up the BAUD-related registers */

  DEBUGASSERT(clkdiv >= 0);

  ibaud  = b32toi(div);
  regval = UART_BAUD0_IBAUD(ibaud) | UART_BAUD0_CLKDIV(clkdiv);
  putreg32(regval, base + MAX326_UART_BAUD0_OFFSET);

  regval = b32frac(div) >> (32 - 12);
  putreg32(regval, base + MAX326_UART_BAUD1_OFFSET);
}

void max326_lowsetup(void)
{
  /* Enable clocking to GPIO0 */

  max326_gpio0_enableclk();

#ifdef HAVE_UART_DEVICE
#ifdef CONFIG_MAX326XX_UART0
  /* Enable clocking to UART0 */

  max326_uart0_enableclk();

  /* Configure UART0 pins */

  max326_gpio_config(GPIO_UART0_RX);
  max326_gpio_config(GPIO_UART0_TX);
#ifdef CONFIG_UART0_OFLOWCONTROL
  max326_gpio_config(GPIO_UART0_CTS);
#endif
#ifdef CONFIG_UART0_IFLOWCONTROL
  max326_gpio_config(GPIO_UART0_RTS);
#endif
#endif /* CONFIG_MAX326XX_UART0 */

#ifdef CONFIG_MAX326XX_UART1
  /* Enable clocking to UART1 */

  max326_uart1_enableclk();

  /* Configure UART1 pins */

  max326_gpio_config(GPIO_UART1_RX);
  max326_gpio_config(GPIO_UART1_TX);
#ifdef CONFIG_UART1_OFLOWCONTROL
  max326_gpio_config(GPIO_UART1_CTS);
#endif
#ifdef CONFIG_UART1_IFLOWCONTROL
  max326_gpio_config(GPIO_UART1_RTS);
#endif
#endif /* CONFIG_MAX326XX_UART1 */

#ifdef HAVE_UART_CONSOLE
  /* Configure the console UART (if any) */

  max326_uart_configure(CONSOLE_BASE, &g_console_config);

#endif /* HAVE_UART_CONSOLE */
#endif /* HAVE_UART_DEVICE */
}

void arm_lowputc(char ch)
{
#ifdef HAVE_UART_CONSOLE
  irqstate_t flags;

  /* Disable interrupts so that the test and the transmission are
   * atomic.
   */

  flags = spin_lock_irqsave(&g_max32660_lowputc_lock);

  /* Wait for the transmit FIFO to be not full */

  while ((getreg32(CONSOLE_BASE + MAX326_UART_STAT_OFFSET) &
          UART_STAT_TXFULL) != 0);

  /* Send the character */

  putreg32((uint32_t)ch, CONSOLE_BASE + MAX326_UART_FIFO_OFFSET);

  spin_unlock_irqrestore(&g_max32660_lowputc_lock, flags);

#endif
}
